// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<JobsChart /> should render correctly 1`] = `
<DocumentFragment>
  <div
    class="pf-c-chart"
    style="height: 100%; width: 100%; user-select: none; pointer-events: none; position: relative;"
  >
    <svg
      aria-describedby="victory-container-1-desc"
      aria-labelledby="victory-container-1-title"
      height="225"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 1024 225"
      width="1024"
    >
      <title
        id="victory-container-1-title"
      >
        Jobs across clusters
      </title>
      <desc
        id="victory-container-1-desc"
      >
        Jobs across clusters
      </desc>
      <g
        role="presentation"
      >
        <line
          role="presentation"
          shape-rendering="auto"
          style="stroke: #d2d2d2; fill: transparent; stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
          vector-effect="non-scaling-stroke"
          x1="60"
          x2="1004"
          y1="165"
          y2="165"
        />
        <text
          direction="inherit"
          dx="0"
          id="chart-axis-0-axisLabel-0"
          x="532"
          y="206.97"
        >
          <tspan
            dx="0"
            dy="0"
            style="padding: 30px; font-size: 14px; font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; letter-spacing: normal; stroke: transparent; text-anchor: middle; fill: #252525;"
            text-anchor="middle"
            x="532"
          >
            Time: Day
          </tspan>
        </text>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #d2d2d2; fill: transparent; size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="242.75314283074016"
            x2="242.75314283074016"
            y1="165"
            y2="170"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-0-tickLabels-0"
            x="242.75314283074016"
            y="188.55"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 10px; font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; letter-spacing: normal; padding: 10px; stroke: transparent; fill: #4f5255;"
              text-anchor="middle"
              x="242.75314283074016"
            >
              0.2
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #d2d2d2; fill: transparent; size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="425.5062856614803"
            x2="425.5062856614803"
            y1="165"
            y2="170"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-0-tickLabels-1"
            x="425.5062856614803"
            y="188.55"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 10px; font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; letter-spacing: normal; padding: 10px; stroke: transparent; fill: #4f5255;"
              text-anchor="middle"
              x="425.5062856614803"
            >
              0.4
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #d2d2d2; fill: transparent; size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="608.2594284922204"
            x2="608.2594284922204"
            y1="165"
            y2="170"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-0-tickLabels-2"
            x="608.2594284922204"
            y="188.55"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 10px; font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; letter-spacing: normal; padding: 10px; stroke: transparent; fill: #4f5255;"
              text-anchor="middle"
              x="608.2594284922204"
            >
              0.6
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #d2d2d2; fill: transparent; size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="791.0125713229606"
            x2="791.0125713229606"
            y1="165"
            y2="170"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-0-tickLabels-3"
            x="791.0125713229606"
            y="188.55"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 10px; font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; letter-spacing: normal; padding: 10px; stroke: transparent; fill: #4f5255;"
              text-anchor="middle"
              x="791.0125713229606"
            >
              0.8
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #d2d2d2; fill: transparent; size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="973.7657141537007"
            x2="973.7657141537007"
            y1="165"
            y2="170"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-0-tickLabels-4"
            x="973.7657141537007"
            y="188.55"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 10px; font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; letter-spacing: normal; padding: 10px; stroke: transparent; fill: #4f5255;"
              text-anchor="middle"
              x="973.7657141537007"
            >
              1
            </tspan>
          </text>
        </g>
      </g>
      <g
        role="presentation"
      >
        <line
          role="presentation"
          shape-rendering="auto"
          style="stroke: #d2d2d2; fill: transparent; stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
          vector-effect="non-scaling-stroke"
          x1="60"
          x2="60"
          y1="20"
          y2="165"
        />
        <text
          direction="inherit"
          dx="0"
          id="chart-axis-1-axisLabel-0"
          transform="rotate(-90,15,92.5)"
          x="15"
          y="90.47"
        >
          <tspan
            dx="0"
            dy="0"
            style="padding: 45px; font-size: 14px; font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; letter-spacing: normal; stroke: transparent; text-anchor: middle; fill: #252525;"
            text-anchor="middle"
            x="15"
          >
            Jobs across clusters
          </tspan>
        </text>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #d2d2d2; fill: none; pointer-events: painted; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="60"
            x2="1004"
            y1="136"
            y2="136"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #d2d2d2; fill: transparent; size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="60"
            x2="55"
            y1="136"
            y2="136"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-1-tickLabels-0"
            x="45"
            y="139.55"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 10px; font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; letter-spacing: normal; padding: 10px; stroke: transparent; fill: #4f5255;"
              text-anchor="end"
              x="45"
            >
              0
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #d2d2d2; fill: none; pointer-events: painted; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="60"
            x2="1004"
            y1="107"
            y2="107"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #d2d2d2; fill: transparent; size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="60"
            x2="55"
            y1="107"
            y2="107"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-1-tickLabels-1"
            x="45"
            y="110.55"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 10px; font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; letter-spacing: normal; padding: 10px; stroke: transparent; fill: #4f5255;"
              text-anchor="end"
              x="45"
            >
              0
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #d2d2d2; fill: none; pointer-events: painted; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="60"
            x2="1004"
            y1="78"
            y2="78"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #d2d2d2; fill: transparent; size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="60"
            x2="55"
            y1="78"
            y2="78"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-1-tickLabels-2"
            x="45"
            y="81.55"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 10px; font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; letter-spacing: normal; padding: 10px; stroke: transparent; fill: #4f5255;"
              text-anchor="end"
              x="45"
            >
              1
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #d2d2d2; fill: none; pointer-events: painted; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="60"
            x2="1004"
            y1="48.99999999999999"
            y2="48.99999999999999"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #d2d2d2; fill: transparent; size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="60"
            x2="55"
            y1="48.99999999999999"
            y2="48.99999999999999"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-1-tickLabels-3"
            x="45"
            y="52.54999999999999"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 10px; font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; letter-spacing: normal; padding: 10px; stroke: transparent; fill: #4f5255;"
              text-anchor="end"
              x="45"
            >
              1
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #d2d2d2; fill: none; pointer-events: painted; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="60"
            x2="1004"
            y1="20"
            y2="20"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #d2d2d2; fill: transparent; size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="60"
            x2="55"
            y1="20"
            y2="20"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-1-tickLabels-4"
            x="45"
            y="23.55"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 10px; font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; letter-spacing: normal; padding: 10px; stroke: transparent; fill: #4f5255;"
              text-anchor="end"
              x="45"
            >
              1
            </tspan>
          </text>
        </g>
      </g>
      <g>
        <g
          role="presentation"
        >
          <path
            d="M 966.8297785154242, 165 
A 0 0 0 0 1, 966.8297785154242, 165 
L 966.8297785154242, 20 
A 0 0 0 0 1, 966.8297785154242, 20 
L 976.8297785154242, 20 
A 0 0 0 0 1, 976.8297785154242, 20 
L 976.8297785154242, 165 
A 0 0 0 0 1, 976.8297785154242, 165 
 z"
            index="0"
            role="presentation"
            shape-rendering="auto"
            style="fill: #38812f; stroke: none; stroke-width: 1; padding: 8px;"
          />
        </g>
        <g
          role="presentation"
        >
          <path
            d="M 966.8297785154242, 165 
A 0 0 0 0 1, 966.8297785154242, 165 
L 966.8297785154242, 20 
A 0 0 0 0 1, 966.8297785154242, 20 
L 976.8297785154242, 20 
A 0 0 0 0 1, 976.8297785154242, 20 
L 976.8297785154242, 165 
A 0 0 0 0 1, 976.8297785154242, 165 
 z"
            index="0"
            role="presentation"
            shape-rendering="auto"
            style="fill: #7d1007; stroke: none; stroke-width: 1; padding: 8px;"
          />
        </g>
      </g>
    </svg>
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="225"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 1024 225"
        width="1024"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`<JobsChart /> should render correctly in loading state 1`] = `
<DocumentFragment>
  <div
    class="pf-c-chart"
    style="height: 100%; width: 100%; user-select: none; pointer-events: none; position: relative;"
  >
    <svg
      aria-describedby="victory-container-2-desc"
      aria-labelledby="victory-container-2-title"
      height="225"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 1024 225"
      width="1024"
    >
      <title
        id="victory-container-2-title"
      >
        Jobs across clusters
      </title>
      <desc
        id="victory-container-2-desc"
      >
        Jobs across clusters
      </desc>
      <g
        role="presentation"
      >
        <line
          role="presentation"
          shape-rendering="auto"
          style="stroke: #d2d2d2; fill: transparent; stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
          vector-effect="non-scaling-stroke"
          x1="60"
          x2="1004"
          y1="165"
          y2="165"
        />
        <text
          direction="inherit"
          dx="0"
          id="chart-axis-0-axisLabel-0"
          x="532"
          y="206.97"
        >
          <tspan
            dx="0"
            dy="0"
            style="padding: 30px; font-size: 14px; font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; letter-spacing: normal; stroke: transparent; text-anchor: middle; fill: #252525;"
            text-anchor="middle"
            x="532"
          >
            Time: Day
          </tspan>
        </text>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #d2d2d2; fill: transparent; size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="242.75314283074016"
            x2="242.75314283074016"
            y1="165"
            y2="170"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-0-tickLabels-0"
            x="242.75314283074016"
            y="188.55"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 10px; font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; letter-spacing: normal; padding: 10px; stroke: transparent; fill: #4f5255;"
              text-anchor="middle"
              x="242.75314283074016"
            >
              0.2
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #d2d2d2; fill: transparent; size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="425.5062856614803"
            x2="425.5062856614803"
            y1="165"
            y2="170"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-0-tickLabels-1"
            x="425.5062856614803"
            y="188.55"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 10px; font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; letter-spacing: normal; padding: 10px; stroke: transparent; fill: #4f5255;"
              text-anchor="middle"
              x="425.5062856614803"
            >
              0.4
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #d2d2d2; fill: transparent; size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="608.2594284922204"
            x2="608.2594284922204"
            y1="165"
            y2="170"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-0-tickLabels-2"
            x="608.2594284922204"
            y="188.55"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 10px; font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; letter-spacing: normal; padding: 10px; stroke: transparent; fill: #4f5255;"
              text-anchor="middle"
              x="608.2594284922204"
            >
              0.6
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #d2d2d2; fill: transparent; size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="791.0125713229606"
            x2="791.0125713229606"
            y1="165"
            y2="170"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-0-tickLabels-3"
            x="791.0125713229606"
            y="188.55"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 10px; font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; letter-spacing: normal; padding: 10px; stroke: transparent; fill: #4f5255;"
              text-anchor="middle"
              x="791.0125713229606"
            >
              0.8
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #d2d2d2; fill: transparent; size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="973.7657141537007"
            x2="973.7657141537007"
            y1="165"
            y2="170"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-0-tickLabels-4"
            x="973.7657141537007"
            y="188.55"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 10px; font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; letter-spacing: normal; padding: 10px; stroke: transparent; fill: #4f5255;"
              text-anchor="middle"
              x="973.7657141537007"
            >
              1
            </tspan>
          </text>
        </g>
      </g>
      <g
        role="presentation"
      >
        <line
          role="presentation"
          shape-rendering="auto"
          style="stroke: #d2d2d2; fill: transparent; stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
          vector-effect="non-scaling-stroke"
          x1="60"
          x2="60"
          y1="20"
          y2="165"
        />
        <text
          direction="inherit"
          dx="0"
          id="chart-axis-1-axisLabel-0"
          transform="rotate(-90,15,92.5)"
          x="15"
          y="90.47"
        >
          <tspan
            dx="0"
            dy="0"
            style="padding: 45px; font-size: 14px; font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; letter-spacing: normal; stroke: transparent; text-anchor: middle; fill: #252525;"
            text-anchor="middle"
            x="15"
          >
            Jobs across clusters
          </tspan>
        </text>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #d2d2d2; fill: none; pointer-events: painted; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="60"
            x2="1004"
            y1="136"
            y2="136"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #d2d2d2; fill: transparent; size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="60"
            x2="55"
            y1="136"
            y2="136"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-1-tickLabels-0"
            x="45"
            y="139.55"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 10px; font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; letter-spacing: normal; padding: 10px; stroke: transparent; fill: #4f5255;"
              text-anchor="end"
              x="45"
            >
              0
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #d2d2d2; fill: none; pointer-events: painted; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="60"
            x2="1004"
            y1="107"
            y2="107"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #d2d2d2; fill: transparent; size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="60"
            x2="55"
            y1="107"
            y2="107"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-1-tickLabels-1"
            x="45"
            y="110.55"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 10px; font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; letter-spacing: normal; padding: 10px; stroke: transparent; fill: #4f5255;"
              text-anchor="end"
              x="45"
            >
              0
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #d2d2d2; fill: none; pointer-events: painted; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="60"
            x2="1004"
            y1="78"
            y2="78"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #d2d2d2; fill: transparent; size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="60"
            x2="55"
            y1="78"
            y2="78"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-1-tickLabels-2"
            x="45"
            y="81.55"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 10px; font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; letter-spacing: normal; padding: 10px; stroke: transparent; fill: #4f5255;"
              text-anchor="end"
              x="45"
            >
              1
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #d2d2d2; fill: none; pointer-events: painted; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="60"
            x2="1004"
            y1="48.99999999999999"
            y2="48.99999999999999"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #d2d2d2; fill: transparent; size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="60"
            x2="55"
            y1="48.99999999999999"
            y2="48.99999999999999"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-1-tickLabels-3"
            x="45"
            y="52.54999999999999"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 10px; font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; letter-spacing: normal; padding: 10px; stroke: transparent; fill: #4f5255;"
              text-anchor="end"
              x="45"
            >
              1
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #d2d2d2; fill: none; pointer-events: painted; stroke-linecap: round; stroke-linejoin: round;"
            vector-effect="non-scaling-stroke"
            x1="60"
            x2="1004"
            y1="20"
            y2="20"
          />
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: #d2d2d2; fill: transparent; size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="60"
            x2="55"
            y1="20"
            y2="20"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-1-tickLabels-4"
            x="45"
            y="23.55"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-size: 10px; font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; letter-spacing: normal; padding: 10px; stroke: transparent; fill: #4f5255;"
              text-anchor="end"
              x="45"
            >
              1
            </tspan>
          </text>
        </g>
      </g>
      <g>
        <g
          role="presentation"
        >
          <path
            d="M 966.8297785154242, 165 
A 0 0 0 0 1, 966.8297785154242, 165 
L 966.8297785154242, 20 
A 0 0 0 0 1, 966.8297785154242, 20 
L 976.8297785154242, 20 
A 0 0 0 0 1, 976.8297785154242, 20 
L 976.8297785154242, 165 
A 0 0 0 0 1, 976.8297785154242, 165 
 z"
            index="0"
            role="presentation"
            shape-rendering="auto"
            style="fill: #38812f; stroke: none; stroke-width: 1; padding: 8px;"
          />
        </g>
        <g
          role="presentation"
        >
          <path
            d="M 966.8297785154242, 165 
A 0 0 0 0 1, 966.8297785154242, 165 
L 966.8297785154242, 20 
A 0 0 0 0 1, 966.8297785154242, 20 
L 976.8297785154242, 20 
A 0 0 0 0 1, 976.8297785154242, 20 
L 976.8297785154242, 165 
A 0 0 0 0 1, 976.8297785154242, 165 
 z"
            index="0"
            role="presentation"
            shape-rendering="auto"
            style="fill: #7d1007; stroke: none; stroke-width: 1; padding: 8px;"
          />
        </g>
      </g>
    </svg>
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="225"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 1024 225"
        width="1024"
      />
    </div>
  </div>
</DocumentFragment>
`;
